# greco

./: .gitignore  Cargo.toml  DOCKERFILE  LICENSE  Nargo.toml  README.md
.github/workflows/: ci.yml  circuit-test.yml
circuits/: Nargo.toml  README.md
circuits/crypto/: mod.nr  pk_encryption.nr  safe.nr
circuits/src/: constants.nr  lib.nr  main.nr  pk_enc_constants_1024_2x52_2048.nr  pk_encryption.nr  polynomial.nr  safe.nr
circuits/src/crypto/: greco.nr  halo2.rs  mod.nr  pk_encryption.nr  safe.nr
circuits/src/math/: polynomial.nr
contracts/: BfvEncryptionVerifier.sol  BfvPKEncryptionVerifier.sol
crates/: Cargo.toml  README.md
crates/generator/: Cargo.toml  README.md
crates/generator/src/: bfv.rs  bounds.rs  cli.rs  lib.rs  vectors.rs
crates/generator/src/generator/: main.rs  mod.rs
crates/generator/src/generators/: mod.rs  noir.rs  toml.rs
crates/polynomial/: Cargo.toml  README.md
crates/polynomial/src/: lib.rs
examples/: README.md
examples/greco/: Nargo.toml  Prover.toml
examples/greco/src/: main.nr
examples/pk_encryption/: Nargo.toml  Prover.toml  README.md
examples/pk_encryption/src/: main.nr
rs-script/: .gitignore  Cargo.toml
rs-script/scripts/constants/pk_enc_constants/: pk_enc_constants_1024_2x52_2048.nr
rs-script/src/: lib.rs  main.rs  poly.rs
scripts/: circuit_pk.py  circuit_sk.py  generate_pk_data.py  requirements.txt  test_pk_enc.py  utils.py
src/: challenge.nr  lib.nr  lib.rs  pk_encryption_circuit.rs  poly.rs  polynomial.nr  sk_encryption_circuit.rs
src/constants/: mod.rs  pk_enc_constants_1024_15x60_65537.rs  sk_enc_constants_4096_2x39_65537.rs  sk_enc_constants_8192_4x55_65537.rs
src/constants/pk_enc_constants/: mod.rs  pk_enc_constants_1024_15x60_65537.rs  pk_enc_constants_1024_2x52_2048.rs  pk_enc_constants_2048_1x52_1032193.rs
src/constants/sk_enc_constants/: mod.rs
src/data/: sk_enc_4096_2x55_65537.json
src/data/pk_enc_data/: pk_enc_1024_15x60_65537.json  pk_enc_1024_15x60_65537_zeroes.json  pk_enc_1024_2x52_2048.json  pk_enc_1024_2x52_2048_zeroes.json  pk_enc_2048_1x52_1032193.json  pk_enc_2048_1x52_1032193_zeroes.json
src/data/sk_enc_data/: sk_enc_1024_15x60_65537.json  sk_enc_4096_2x39_65537.json  sk_enc_4096_2x55_65537.json
test/: Nargo.toml  Prover.toml  Prover0.toml  pk_enc_1024_2x52_2048_zeroes.json
test/src/: main.nr
testing/: .gitignore  Nargo.toml  Prover.toml
testing/js/: generate-proof.ts  index.html  package.json  proof  tsconfig.json  vite.config.ts  web-interface.ts
testing/src/: main.nr
