[package]
name = "e3-greco-generator"
description = "Generator of cryptographic parameters and constants for Greco zk-proofs"
version.workspace = true
edition.workspace = true
license = "MIT"

[lib]
name = "greco_generator"
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/generator/main.rs"

[dependencies]
polynomial = { workspace = true }
fhe = { workspace = true }
fhe-traits = { workspace = true }
fhe-math = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }